--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "enzyme": "^3.11.0",
     "eslint-plugin-jest": "^23.13.2",
