--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "client:build": "webpack --mode production",
     "client:dev": "webpack --watch --mode development",
     "updateSnapshots": "jest --updateSnapshot",
-    "writeCSVs": "node db/generateCSV.js"
+    "seed2.0": "node db/seed2.0/seed2.0.js"
   },
   "repository": {
     "type": "git",
