--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "fs": "0.0.1-security",
     "jest": "^26.0.1",
     "jest-styled-components": "^7.0.2",
+    "k6": "0.0.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.19",
+    "morgan": "^1.10.0",
+    "newrelic": "^6.11.0",
     "pg": "^8.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
