--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "test": "jest",
     "lint": "eslint --ext .jsx --ext .js ./",
     "verify": "npm run test && npm run lint",
-    "seed": "node db/seed.js",
     "server": "nodemon server/server.js",
-    "server:prod": "node db/seed.js  && node server/server.js",
-    "server:prod-no-seed": "node server/server.js",
+    "server:prod": "node server/server.js",
     "client:build": "webpack --mode production",
     "client:dev": "webpack --watch --mode development",
     "updateSnapshots": "jest --updateSnapshot",
